--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/escalade?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = Password
+spring.datasource.username = ben
+spring.datasource.password = pass
 
 
 ## Hibernate Properties
