--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/escalade?useSSL=false
+spring.datasource.url = jdbc:mysql://192.168.79.3:3306/escalade?useSSL=false
 spring.datasource.username = ben
 spring.datasource.password = pass
 
