Installation de Hibernate Search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
+## Hibernate search Properties
+spring.jpa.properties.hibernate.search.jmx_enabled=true
+spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
+spring.jpa.properties.hibernate.search.generate_statistics=true
+spring.jpa.properties.hibernate.search.lucene_version=LUCENE_CURRENT
+spring.jpa.properties.hibernate.search.default.indexBase=/tmp/search
+
+
+## Log configuration
 logging.level.org.springframework.security=DEBUG
 logging.level.com.memorynotfound=DEBUG
 logging.level.org.springframework.web=DEBUG
