Ajout des longueurs et cotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.jpa.properties.hibernate.search.default.indexBase=/tmp/search
 
 
 ## Log configuration
+logging.level.com.begr.escalade = DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.memorynotfound=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+
+#Mapping for CSS
+spring.resources.add-mappings=true
