--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.begr</groupId>
 	<artifactId>escalade</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<version>1.0</version>
 	<name>escalade</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
